feat: redis gradle 추가

--- a/travel/build.gradle
+++ b/travel/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.10.1'
 	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 }
 
 tasks.named('test') {
